CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-DHAVE_STRING_H)
ADD_DEFINITIONS(-DNOSSL)
ADD_DEFINITIONS(-D__PRETTY_FUNCTION__="")
ADD_DEFINITIONS(-D_WIN32)

INCLUDE_DIRECTORIES(
	../win32-msvc/gtk+/include/atk-1.0
	../win32-msvc/gtk+/include/cairo
	../win32-msvc/gtk+/include/glib-2.0
	../win32-msvc/gtk+/include/gtk-2.0
	../win32-msvc/gtk+/include/pango-1.0
	../win32-msvc/gtk+/include
	../win32-msvc/gtk+/lib/glib-2.0/include
	../win32-msvc/gtk+/lib/gtk-2.0/include
	../win32-msvc/src
	../win32-msvc
	../win32
	../src
)

LINK_DIRECTORIES(
	../win32-msvc/gtk+/lib
)

LINK_LIBRARIES(
	cairo
	gdk_pixbuf-2.0
	gdk-win32-2.0
	gio-2.0
	glib-2.0
	gmodule-2.0
	gobject-2.0
	gtk-win32-2.0
	intl
	pango-1.0
	pangocairo-1.0
	zdll
)

ADD_EXECUTABLE(grisbi
	../src/accueil.c
	../src/accueil.h
	../src/affichage.c
	../src/affichage.h
	../src/affichage_liste.c
	../src/affichage_liste.h
	../src/barre_outils.c
	../src/barre_outils.h
	../src/categories_onglet.c
	../src/categories_onglet.h
	../src/classement_echeances.c
	../src/classement_echeances.h
	../src/comptes_onglet.c
	../src/comptes_onglet.h
	../src/csv_parse.c
	../src/csv_parse.h
	../src/custom_list.c
	../src/custom_list.h
	../src/dialog.c
	../src/dialog.h
	../src/erreur.c
	../src/erreur.h
	../src/etats_affiche.c
	../src/etats_affiche.h
	../src/etats_calculs.c
	../src/etats_calculs.h
	../src/etats_config.c
	../src/etats_config.h
	../src/etats_gtktable.c
	../src/etats_gtktable.h
	../src/etats_html.c
	../src/etats_html.h
	../src/etats_latex.c
	../src/etats_latex.h
	../src/etats_onglet.c
	../src/etats_onglet.h
	../src/etats_support.c
	../src/etats_support.h
	../src/export.c
	../src/export.h
	../src/export_csv.c
	../src/export_csv.h
	../src/fenetre_principale.c
	../src/fenetre_principale.h
	../src/file_obfuscate.c
	../src/file_obfuscate.h
	../src/file_obfuscate_qif.c
	../src/file_obfuscate_qif.h
	../src/go-charmap-sel.c
	../src/go-charmap-sel.h
	../src/go-optionmenu.c
	../src/go-optionmenu.h
	../src/gsb_account.c
	../src/gsb_account.h
	../src/gsb_account_property.c
	../src/gsb_account_property.h
	../src/gsb_archive_config.c
	../src/gsb_archive_config.h
	../src/gsb_assistant.c
	../src/gsb_assistant.h
	../src/gsb_assistant_account.c
	../src/gsb_assistant_account.h
	../src/gsb_assistant_archive.c
	../src/gsb_assistant_archive.h
	../src/gsb_assistant_archive_export.c
	../src/gsb_assistant_archive_export.h
	../src/gsb_assistant_file.c
	../src/gsb_assistant_file.h
	../src/gsb_assistant_first.c
	../src/gsb_assistant_first.h
	../src/gsb_assistant_reconcile_config.c
	../src/gsb_assistant_reconcile_config.h
	../src/gsb_autofunc.c
	../src/gsb_autofunc.h
	../src/gsb_automem.c
	../src/gsb_automem.h
	../src/gsb_bank.c
	../src/gsb_bank.h
	../src/gsb_calendar.c
	../src/gsb_calendar.h
	../src/gsb_calendar_entry.c
	../src/gsb_calendar_entry.h
	../src/gsb_category.c
	../src/gsb_category.h
	../src/gsb_combo_box.c
	../src/gsb_combo_box.h
	../src/gsb_currency.c
	../src/gsb_currency.h
	../src/gsb_currency_config.c
	../src/gsb_currency_config.h
	../src/gsb_currency_link_config.c
	../src/gsb_currency_link_config.h
	../src/gsb_data_account.c
	../src/gsb_data_account.h
	../src/gsb_data_archive.c
	../src/gsb_data_archive.h
	../src/gsb_data_archive_store.c
	../src/gsb_data_archive_store.h
	../src/gsb_data_bank.c
	../src/gsb_data_bank.h
	../src/gsb_data_budget.c
	../src/gsb_data_budget.h
	../src/gsb_data_category.c
	../src/gsb_data_category.h
	../src/gsb_data_currency.c
	../src/gsb_data_currency.h
	../src/gsb_data_currency_link.c
	../src/gsb_data_currency_link.h
	../src/gsb_data_form.c
	../src/gsb_data_form.h
	../src/gsb_data_fyear.c
	../src/gsb_data_fyear.h
	../src/gsb_data_import_rule.c
	../src/gsb_data_import_rule.h
	../src/gsb_data_mix.c
	../src/gsb_data_mix.h
	../src/gsb_data_partial_balance.c
	../src/gsb_data_partial_balance.h
	../src/gsb_data_payee.c
	../src/gsb_data_payee.h
	../src/gsb_data_payment.c
	../src/gsb_data_payment.h
	../src/gsb_data_print_config.c
	../src/gsb_data_print_config.h
	../src/gsb_data_reconcile.c
	../src/gsb_data_reconcile.h
	../src/gsb_data_report.c
	../src/gsb_data_report.h
	../src/gsb_data_report_amout_comparison.c
	../src/gsb_data_report_amout_comparison.h
	../src/gsb_data_report_text_comparison.c
	../src/gsb_data_report_text_comparison.h
	../src/gsb_data_scheduled.c
	../src/gsb_data_scheduled.h
	../src/gsb_data_transaction.c
	../src/gsb_data_transaction.h
	../src/gsb_debug.c
	../src/gsb_debug.h
	../src/gsb_file.c
	../src/gsb_file.h
	../src/gsb_file_config.c
	../src/gsb_file_config.h
	../src/gsb_file_load.c
	../src/gsb_file_load.h
	../src/gsb_file_others.c
	../src/gsb_file_others.h
	../src/gsb_file_save.c
	../src/gsb_file_save.h
	../src/gsb_file_util.c
	../src/gsb_file_util.h
	../src/gsb_form.c
	../src/gsb_form.h
	../src/gsb_form_config.c
	../src/gsb_form_config.h
	../src/gsb_form_scheduler.c
	../src/gsb_form_scheduler.h
	../src/gsb_form_transaction.c
	../src/gsb_form_transaction.h
	../src/gsb_form_widget.c
	../src/gsb_form_widget.h
	../src/gsb_fyear.c
	../src/gsb_fyear.h
	../src/gsb_fyear_config.c
	../src/gsb_fyear_config.h
	../src/gsb_payment_method.c
	../src/gsb_payment_method.h
	../src/gsb_payment_method_config.c
	../src/gsb_payment_method_config.h
	../src/gsb_plugins.c
	../src/gsb_plugins.h
	../src/gsb_real.c
	../src/gsb_real.h
	../src/gsb_reconcile.c
	../src/gsb_reconcile.h
	../src/gsb_reconcile_config.c
	../src/gsb_reconcile_config.h
	../src/gsb_reconcile_list.c
	../src/gsb_reconcile_list.h
	../src/gsb_reconcile_sort_config.c
	../src/gsb_reconcile_sort_config.h
	../src/gsb_report.c
	../src/gsb_report.h
	../src/gsb_scheduler.c
	../src/gsb_scheduler.h
	../src/gsb_scheduler_list.c
	../src/gsb_scheduler_list.h
	../src/gsb_select_icon.c
	../src/gsb_select_icon.h
	../src/gsb_status.c
	../src/gsb_status.h
	../src/gsb_transactions_list.c
	../src/gsb_transactions_list.h
	../src/gsb_transactions_list_sort.c
	../src/gsb_transactions_list_sort.h
	../src/gtk_combofix.c
	../src/gtk_combofix.h
	../src/help.c
	../src/help.h
	../src/import.c
	../src/import.h
	../src/import_csv.c
	../src/import_csv.h
	../src/imputation_budgetaire.c
	../src/imputation_budgetaire.h
	../src/main.c
	../src/main.h
	../src/main_cunit.c
	../src/main_cunit.h
	../src/menu.c
	../src/menu.h
	../src/meta_budgetary.c
	../src/meta_budgetary.h
	../src/meta_categories.c
	../src/meta_categories.h
	../src/meta_payee.c
	../src/meta_payee.h
	../src/metatree.c
	../src/metatree.h
	../src/navigation.c
	../src/navigation.h
	../src/parametres.c
	../src/parametres.h
	../src/parse_cmdline.c
	../src/parse_cmdline.h
	../src/print_config.c
	../src/print_config.h
	../src/print_dialog_config.c
	../src/print_dialog_config.h
	../src/print_report.c
	../src/print_report.h
	../src/print_transactions_list.c
	../src/print_transactions_list.h
	../src/qif.c
	../src/qif.h
	../src/tiers_onglet.c
	../src/tiers_onglet.h
	../src/tip.c
	../src/tip.h
	../src/traitement_variables.c
	../src/traitement_variables.h
	../src/transaction_list.c
	../src/transaction_list.h
	../src/transaction_list_select.c
	../src/transaction_list_select.h
	../src/transaction_list_sort.c
	../src/transaction_list_sort.h
	../src/transaction_model.c
	../src/transaction_model.h
	../src/utils.c
	../src/utils.h
	../src/utils_buttons.c
	../src/utils_buttons.h
	../src/utils_dates.c
	../src/utils_dates.h
	../src/utils_editables.c
	../src/utils_editables.h
	../src/utils_files.c
	../src/utils_files.h
	../src/utils_file_selection.c
	../src/utils_file_selection.h
	../src/utils_font.c
	../src/utils_font.h
	../src/utils_operations.c
	../src/utils_operations.h
	../src/utils_str.c
	../src/utils_str.h
	../win32-msvc/src/getopt.c
	../win32-msvc/src/getopt.h
	../win32-msvc/src/getopt1.c
	../win32-msvc/src/realpath.c
	../win32-msvc/src/realpath.h
	../win32/win32gtkutils.c
	../win32/win32gtkutils.h
	../win32/win32utils.c
	../win32/win32utils.h
)
